# MAZE_m4_black

./: .gitignore  README.md  README_KR.md
HW/KiCAD/STM32G4 V1.0/: STM32G4 MAZE 물품.xlsx  STM32G4 MAZE.kicad_pcb  STM32G4 MAZE.kicad_prl  STM32G4 MAZE.kicad_pro  STM32G4 MAZE.kicad_sch  connector.kicad_sch  fp-info-cache  microcontroller.kicad_sch  peripheral.kicad_sch
HW/KiCAD/STM32G4 V1.0/manufacturing/: STM32G4 MAZE-B_Cu.gbr  STM32G4 MAZE-B_Mask.gbr  STM32G4 MAZE-B_Paste.gbr  STM32G4 MAZE-B_Silkscreen.gbr  STM32G4 MAZE-Edge_Cuts.gbr  STM32G4 MAZE-F_Cu.gbr  STM32G4 MAZE-F_Mask.gbr  STM32G4 MAZE-F_Paste.gbr  STM32G4 MAZE-F_Silkscreen.gbr  STM32G4 MAZE-NPTH.drl  STM32G4 MAZE-PTH.drl  STM32G4 MAZE-job.gbrjob
SW/stm32g473vet6/base_cpp/: CMakeLists.txt
SW/stm32g473vet6/base_cpp/cmake/: project.cmake
SW/stm32g474vet6/base/: .cproject  .mxproject  CMakeLists.txt  STM32G474VETX_FLASH.ld  STM32G474VETX_RAM.ld  base.ioc
SW/stm32g474vet6/base/Core/Inc/: main.h  stm32g4xx_hal_conf.h  usart.h
SW/stm32g474vet6/base/Core/Src/: gpio.c  main.c  spi.c  usart.c
SW/stm32g474vet6/base/cmake/: gcc-arm-none-eabi.cmake  project.cmake  st-project.cmake  toolchain.cmake
SW/stm32g474vet6/base/inc/: menu.h
SW/stm32g474vet6/base/include/: base.ioc
SW/stm32g474vet6/base/main/: main.c
SW/stm32g474vet6/base/src/: menu.c
SW/stm32g474vet6/base/src/hcms/: hcms.c  hcms.h
SW/stm32g474vet6/base/src/main/: main.c
SW/stm32g474vet6/base/src/test/: c.h
SW/stm32g474vet6/base/src/uart_print/: uart_print.c  uart_print.h
SW/stm32g474vet6/base_cpp/: .gitignore
(+20 files in other folders)
